--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 04:05:02 2018</p>
+         Last Run: Sun Nov 25 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -33,23 +33,23 @@
                         <td>Clear</td>
                         <td>-1</td>
                         <td>-3</td>
-                        <td>2</td>
-                        <td>68</td>
+                        <td>1</td>
+                        <td>67</td>
                         <td>1</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>17</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
                         <td>1</td>
-                        <td>-2</td>
+                        <td>-1</td>
                         <td>2</td>
-                        <td>66</td>
+                        <td>65</td>
                         <td>1</td>
-                        <td>8</td>
-                        <td>SSW</td>
+                        <td>6</td>
+                        <td>SW</td>
                         <td>17</td>
                      </tr>
                      <tr>
@@ -58,11 +58,11 @@
                         <td>2</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>64</td>
+                        <td>63</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>17</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "-2",
+                 "-1",
                  "0"
                ]
              },
@@ -160,7 +160,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
+                 "1",
                  "2",
                  "2"
                ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
-                 "66",
-                 "64"
+                 "67",
+                 "65",
+                 "63"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "16",
                  "17",
-                 "17",
-                 "17"
+                 "18"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 04:05:02 2018</p>
+         Last Run: Sun Nov 25 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -248,12 +248,12 @@
                         <td>Overcast</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>6</td>
-                        <td>82</td>
+                        <td>5</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SSW</td>
-                        <td>93</td>
+                        <td>SW</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -261,7 +261,7 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>14</td>
-                        <td>80</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
@@ -375,7 +375,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
+                 "5",
                  "14",
                  "17"
                ]
@@ -386,8 +386,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
-                 "80",
+                 "81",
+                 "79",
                  "80"
                ]
              },
@@ -397,7 +397,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "93",
+                 "94",
                  "94",
                  "91"
                ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 04:05:02 2018</p>
+         Last Run: Sun Nov 25 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,11 +464,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>7</td>
-                        <td>83</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>15</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -476,7 +476,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>7</td>
-                        <td>86</td>
+                        <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -488,7 +488,7 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>7</td>
-                        <td>89</td>
+                        <td>88</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "83",
-                 "86",
-                 "89"
+                 "82",
+                 "85",
+                 "88"
                ]
              },
              {
@@ -612,7 +612,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "15",
+                 "14",
                  "13",
                  "12"
                ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 04:05:02 2018</p>
+         Last Run: Sun Nov 25 05:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -675,39 +675,39 @@
                   <tbody>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>68</td>
+                        <td>67</td>
                         <td>1</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>29</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>3</td>
+                        <td>4</td>
                         <td>64</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>24</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>3</td>
+                        <td>4</td>
                         <td>63</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>NNW</td>
-                        <td>20</td>
+                        <td>N</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -806,8 +806,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "4",
-                 "3",
-                 "3"
+                 "4",
+                 "4"
                ]
              },
              {
@@ -816,7 +816,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
+                 "67",
                  "64",
                  "63"
                ]
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "29",
-                 "24",
-                 "20"
+                 "44",
+                 "42",
+                 "40"
                ]
              }
            ]
