--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 05:05:02 2018</p>
+         Last Run: Sun Nov 25 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -44,13 +44,13 @@
                         <td>01:00 PM</td>
                         <td>Clear</td>
                         <td>1</td>
-                        <td>-1</td>
-                        <td>2</td>
-                        <td>65</td>
+                        <td>-2</td>
                         <td>1</td>
-                        <td>6</td>
-                        <td>SW</td>
-                        <td>17</td>
+                        <td>64</td>
+                        <td>1</td>
+                        <td>8</td>
+                        <td>SSW</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>18</td>
+                        <td>16</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-3",
-                 "-1",
+                 "-2",
                  "0"
                ]
              },
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "1",
-                 "2",
+                 "1",
                  "2"
                ]
              },
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "67",
-                 "65",
+                 "64",
                  "63"
                ]
              },
@@ -183,8 +183,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "16",
-                 "17",
-                 "18"
+                 "14",
+                 "16"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 05:05:02 2018</p>
+         Last Run: Sun Nov 25 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,35 +249,35 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>5</td>
-                        <td>81</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>94</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>14</td>
-                        <td>79</td>
+                        <td>6</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>94</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>17</td>
-                        <td>80</td>
+                        <td>6</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>91</td>
+                        <td>92</td>
                      </tr>
                   </tbody>
                </table>
@@ -376,8 +376,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
-                 "14",
-                 "17"
+                 "6",
+                 "6"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "83",
                  "81",
-                 "79",
-                 "80"
+                 "82"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "94",
-                 "94",
-                 "91"
+                 "96",
+                 "96",
+                 "92"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 05:05:02 2018</p>
+         Last Run: Sun Nov 25 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>7</td>
-                        <td>82</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>WSW</td>
-                        <td>14</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Clear</td>
-                        <td>-4</td>
-                        <td>-7</td>
                         <td>7</td>
                         <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>13</td>
+                        <td>41</td>
                      </tr>
                      <tr>
-                        <td>11:00 PM</td>
-                        <td>Clear</td>
-                        <td>-5</td>
-                        <td>-9</td>
+                        <td>10:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>-4</td>
+                        <td>-7</td>
                         <td>7</td>
-                        <td>88</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>12</td>
+                        <td>38</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>-5</td>
+                        <td>-9</td>
+                        <td>7</td>
+                        <td>90</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>WSW</td>
+                        <td>34</td>
                      </tr>
                   </tbody>
                </table>
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
                  "85",
-                 "88"
+                 "86",
+                 "90"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "14",
-                 "13",
-                 "12"
+                 "41",
+                 "38",
+                 "34"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 05:05:02 2018</p>
+         Last Run: Sun Nov 25 06:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -679,7 +679,7 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>67</td>
+                        <td>68</td>
                         <td>1</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -691,11 +691,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>64</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>42</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -706,7 +706,7 @@
                         <td>63</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>N</td>
+                        <td>NNW</td>
                         <td>40</td>
                      </tr>
                   </tbody>
@@ -816,8 +816,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
-                 "64",
+                 "68",
+                 "65",
                  "63"
                ]
              },
@@ -828,7 +828,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "44",
-                 "42",
+                 "43",
                  "40"
                ]
              }
