--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 06:05:07 2018</p>
+         Last Run: Sun Nov 25 07:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -32,13 +32,13 @@
                         <td>12:00 PM</td>
                         <td>Clear</td>
                         <td>-1</td>
-                        <td>-3</td>
+                        <td>-4</td>
                         <td>1</td>
-                        <td>67</td>
+                        <td>66</td>
                         <td>1</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>SW</td>
-                        <td>16</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
+                 "-4",
                  "-2",
                  "0"
                ]
@@ -171,7 +171,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
+                 "66",
                  "64",
                  "63"
                ]
@@ -182,7 +182,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "16",
+                 "18",
                  "14",
                  "16"
                ]
@@ -219,12 +219,13 @@
                      options: options
                   });
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 06:05:07 2018</p>
+         Last Run: Sun Nov 25 07:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -439,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 06:05:07 2018</p>
+         Last Run: Sun Nov 25 07:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,36 +464,36 @@
                         <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>7</td>
+                        <td>5</td>
                         <td>85</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>41</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>7</td>
-                        <td>86</td>
+                        <td>5</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>38</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>7</td>
+                        <td>5</td>
                         <td>90</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>34</td>
+                        <td>33</td>
                      </tr>
                   </tbody>
                </table>
@@ -590,9 +591,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
-                 "7",
-                 "7"
+                 "5",
+                 "5",
+                 "5"
                ]
              },
              {
@@ -602,7 +603,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "85",
-                 "86",
+                 "87",
                  "90"
                ]
              },
@@ -612,9 +613,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "41",
-                 "38",
-                 "34"
+                 "40",
+                 "37",
+                 "33"
                ]
              }
            ]
@@ -654,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 06:05:07 2018</p>
+         Last Run: Sun Nov 25 07:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -683,7 +684,7 @@
                         <td>1</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>44</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -703,11 +704,11 @@
                         <td>-2</td>
                         <td>-5</td>
                         <td>4</td>
-                        <td>63</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>40</td>
+                        <td>41</td>
                      </tr>
                   </tbody>
                </table>
@@ -818,7 +819,7 @@
                "data":[
                  "68",
                  "65",
-                 "63"
+                 "64"
                ]
              },
              {
@@ -827,9 +828,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "44",
+                 "45",
                  "43",
-                 "40"
+                 "41"
                ]
              }
            ]
