--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 08:05:02 2018</p>
+         Last Run: Sun Nov 25 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 25, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -31,38 +31,38 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>-1</td>
-                        <td>-4</td>
+                        <td>-3</td>
+                        <td>-6</td>
                         <td>0</td>
-                        <td>66</td>
+                        <td>71</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>SW</td>
-                        <td>18</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>1</td>
-                        <td>-2</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>0</td>
                         <td>64</td>
                         <td>1</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>14</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
-                        <td>2</td>
-                        <td>0</td>
                         <td>1</td>
-                        <td>63</td>
+                        <td>-2</td>
+                        <td>0</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>17</td>
+                        <td>20</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,9 +89,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-4",
-                 "-2",
-                 "0"
+                 "-6",
+                 "-3",
+                 "-2"
                ]
              },
              {
@@ -101,9 +101,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-1",
-                 "1",
-                 "2"
+                 "-3",
+                 "0",
+                 "1"
                ]
              }
            ]
@@ -162,7 +162,7 @@
                "data":[
                  "0",
                  "0",
-                 "1"
+                 "0"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
+                 "71",
                  "64",
-                 "63"
+                 "62"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "18",
-                 "14",
-                 "17"
+                 "21",
+                 "17",
+                 "20"
                ]
              }
            ]
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 08:05:02 2018</p>
+         Last Run: Sun Nov 25 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -440,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 08:05:02 2018</p>
+         Last Run: Sun Nov 25 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -655,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 08:05:02 2018</p>
+         Last Run: Sun Nov 25 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -690,11 +690,11 @@
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-2</td>
-                        <td>-5</td>
+                        <td>-6</td>
                         <td>3</td>
-                        <td>64</td>
+                        <td>65</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NNW</td>
                         <td>43</td>
                      </tr>
@@ -707,7 +707,7 @@
                         <td>64</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>N</td>
+                        <td>NNW</td>
                         <td>41</td>
                      </tr>
                   </tbody>
@@ -736,7 +736,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-6",
-                 "-5",
+                 "-6",
                  "-5"
                ]
              },
@@ -818,7 +818,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "68",
-                 "64",
+                 "65",
                  "64"
                ]
              },
